--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/exam_portal?useSSL=false&serverTimeZone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=@Vrn2912
 
 #hibernate properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
