--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=9191
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/exam_portal?useSSL=false&serverTimeZone=UTC
 spring.datasource.username=root
-#spring.datasource.password=@Vrn2912
-spring.datasource.password=root
+spring.datasource.password=@Vrn2912
+#spring.datasource.password=root
 #hibernate properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
